--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,26 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="EditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:padding">5dp</item>
+        <item name="android:background">#283593</item>
+        <item name="android:textSize">@dimen/abc_text_size_subhead_material</item>
+
+    </style>
+    <style name="EditTextPost" parent="Widget.AppCompat.EditText">
+    <item name="android:padding">5dp</item>
+    <item name="android:background">#eeeeee</item>
+    <item name="android:textSize">@dimen/abc_text_size_subhead_material</item>
+
+</style>
+
 </resources>
