--- a/app/src/main/res/layout/fragment_my_friend.xml
+++ b/app/src/main/res/layout/fragment_my_friend.xml
@@ -1,19 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_friend_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="5dp"
-    android:paddingTop="5dp"
-    android:paddingRight="5dp"
-    tools:context="com.sahilpaudel.app.advocatus.facebook.FriendListActivity">
+    tools:context="com.sahilpaudel.app.advocatus.fragments.MyFriendFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical">
-
     </android.support.v7.widget.RecyclerView>
-</RelativeLayout>
+
+</FrameLayout>
