Time For Design

--- a/app/src/main/res/layout/fragment_write_request.xml
+++ b/app/src/main/res/layout/fragment_write_request.xml
@@ -13,15 +13,79 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
         android:layout_marginLeft="16dp"
-        android:gravity="center"/>
+        android:gravity="center_horizontal"/>
+    <com.jaredrummler.materialspinner.MaterialSpinner
+        android:id="@+id/requestCategory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_below="@id/textDisplay"/>
     <EditText
         android:id="@+id/writepost"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textDisplay"
+        android:layout_height="200dp"
+        android:layout_below="@id/requestCategory"
         android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:inputType="textMultiLine"
-        android:gravity="top"/>
+        android:gravity="top"
+        style="@style/EditTextPost"/>
 
+    <LinearLayout
+        android:id="@+id/textHint"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/writepost"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="16dp">
+
+        <TextView
+            android:text="Enter Start Date"
+            android:id="@+id/startTimeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="40dp" />
+        <TextView
+            android:text="Enter End Date"
+            android:id="@+id/endTimeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textHint"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="16dp">
+
+        <EditText
+            android:hint="2017/12/12"
+            android:id="@+id/startTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="50dp"/>
+        <EditText
+            android:hint="2017/12/12"
+            android:id="@+id/endTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"/>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonSubmit"
+        android:text="SUBMIT"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="40dp"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
