--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,13 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sahilpaudel.app.advocatus.fragments.MyRequestFragment">
+    tools:context="com.sahilpaudel.app.advocatus.fragments.HomeFragment">
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/myRequestRecyclerView"
+        android:id="@+id/myFeedRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical">
+
     </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
