--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -8,7 +8,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.sahilpaudel.app.advocatus.notification.NotificationActivity">
+    tools:context="com.sahilpaudel.app.advocatus.notification.NotificationActivity"
+    android:background="@drawable/background_all_pages">
 
     <Button
         android:text="LOAD TOKEN"
