--- a/app/src/main/res/layout/app_bar_home.xml
+++ b/app/src/main/res/layout/app_bar_home.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.sahilpaudel.app.advocatus.HomeActivity">
+    tools:context="com.sahilpaudel.app.advocatus.HomeActivity"
+    android:background="@drawable/background_all_pages">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
