--- a/app/src/main/res/layout/fragment_my_friend.xml
+++ b/app/src/main/res/layout/fragment_my_friend.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sahilpaudel.app.advocatus.fragments.MyFriendFragment">
+    tools:context="com.sahilpaudel.app.advocatus.fragments.MyFriendFragment"
+    android:background="@drawable/background_all_pages">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
