--- a/app/src/main/res/layout/fragment_my_request.xml
+++ b/app/src/main/res/layout/fragment_my_request.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sahilpaudel.app.advocatus.fragments.MyRequestFragment">
+    tools:context="com.sahilpaudel.app.advocatus.fragments.MyRequestFragment"
+    android:background="@drawable/background_all_pages">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
