--- a/app/src/main/res/layout/friend_list.xml
+++ b/app/src/main/res/layout/friend_list.xml
@@ -8,8 +8,8 @@
     android:paddingBottom="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:background="@drawable/selector"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/background_all_pages">
 
         <ImageView
             android:id="@+id/friend_pic"
