--- a/app/src/main/res/layout/fragment_write_request.xml
+++ b/app/src/main/res/layout/fragment_write_request.xml
@@ -29,6 +29,7 @@
     />
     <EditText
         android:id="@+id/writepost"
+        android:elevation="6dp"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@id/requestCategory"
