--- a/app/src/main/res/drawable/background_all_pages.xml
+++ b/app/src/main/res/drawable/background_all_pages.xml
@@ -27,14 +27,14 @@
     <item android:state_pressed="false" android:state_focused="false">
         <shape>
             <gradient
-                android:startColor="#A9A9A9"
-                android:centerColor="#A9A9A9"
-                android:endColor="#A9A9A9"
+                android:startColor="#F5F5F5"
+                android:centerColor="#F5F5F5"
+                android:endColor="#F5F5F5"
                 android:angle="270"
                 />
             <stroke
                 android:width="0.7dp"
-                android:color="#A9A9A9" />
+                android:color="#F5F5F5" />
 
         </shape>
     </item>
