--- a/app/src/main/res/drawable/button_color.xml
+++ b/app/src/main/res/drawable/button_color.xml
@@ -19,12 +19,12 @@
     <item>
         <shape>
             <gradient
-                android:startColor="#FF3B3F"
-                android:endColor="#FF3B3F"
+                android:startColor="#138D75"
+                android:endColor="#138D75"
                 android:angle="270" />
             <stroke
                 android:width="1dp"
-                android:color="#FF3B3F" />
+                android:color="#138D75" />
             <corners
                 android:radius="6dp" />
             <padding
