--- a/app/src/main/res/drawable/rounded_corners_second.xml
+++ b/app/src/main/res/drawable/rounded_corners_second.xml
@@ -20,22 +20,22 @@
     <item android:state_pressed="false" android:state_focused="true">
         <shape>
             <corners
-                android:radius="15dp" />
+                android:radius="10dp" />
         </shape>
     </item>
 
     <item android:state_pressed="false" android:state_focused="false">
         <shape>
             <gradient
-                android:startColor="#565656"
+                android:startColor="#45B39D"
 
-                android:centerColor="#565656"
-                android:endColor="#565656"
+                android:centerColor="#45B39D"
+                android:endColor="#45B39D"
                 android:angle="270"
                 />
             <stroke
                 android:width="0.7dp"
-                android:color="#565656" />
+                android:color="#45B39D"/>
             <corners
                 android:radius="30dp" />
         </shape>
