--- a/app/src/main/res/layout/fragment_single_post_view.xml
+++ b/app/src/main/res/layout/fragment_single_post_view.xml
@@ -13,6 +13,7 @@
        android:layout_height="wrap_content">
 
     <ImageView
+        android:layout_marginTop="50dp"
         android:layout_width="60dp"
         android:scaleType="fitXY"
         android:layout_height="80dp"
@@ -34,6 +35,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="price"
+        android:layout_marginTop="60dp"
         android:id="@+id/nohelpers_1"
         android:textColor="@color/colorAccent"
         android:layout_alignParentRight="true"
@@ -42,6 +44,7 @@
         />
 
     <TextView
+        android:layout_marginTop="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
@@ -70,13 +73,17 @@
         android:layout_marginRight="5dp" />
     <Button
         android:text="HELP"
+        android:background="@drawable/rounded_corners_second"
         android:id="@+id/buttonhelp_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:layout_below="@id/userPost_1"/>
 
     <Button
         android:text="PASS"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_corners_second"
         android:id="@+id/buttonPass_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
