--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,8 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    android:background="@drawable/background_all_pages">
+    android:background="@drawable/background_all_pages"
+    >
 
     <include
         layout="@layout/app_bar_home"
