--- a/app/src/main/res/layout/fragment_pending_request.xml
+++ b/app/src/main/res/layout/fragment_pending_request.xml
@@ -2,12 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
     tools:context="com.sahilpaudel.app.advocatus.fragments.PendingRequestFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/pendingRecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
