--- a/app/src/main/res/layout/fragment_my_request.xml
+++ b/app/src/main/res/layout/fragment_my_request.xml
@@ -9,7 +9,8 @@
         android:id="@+id/myRequestRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        >
     </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
