--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -13,10 +13,10 @@
 
     <ImageView
         android:id="@+id/iv_userPicture"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:scaleType="fitCenter"
+        android:scaleType="fitStart"
         android:src="@mipmap/ic_launcher"
       />
 
