--- a/app/src/main/res/layout/fragment_single_post_view.xml
+++ b/app/src/main/res/layout/fragment_single_post_view.xml
@@ -1,22 +1,17 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.sahilpaudel.app.advocatus.fragments.SinglePostViewFragment"
-    >
+    android:layout_height="wrap_content"
+    tools:context="com.sahilpaudel.app.advocatus.fragments.SinglePostViewFragment">
 
     <RelativeLayout
-
-        android:layout_marginTop="20dp"
         android:id="@+id/topView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#E5E8E8"
-        android:layout_marginRight="16dp"
-        android:layout_marginLeft="16dp"
-        android:padding="15dp"
-        android:gravity="center"
-        >
+        android:padding="5dp"
+        android:gravity="center">
 
         <ImageView
             android:layout_width="60dp"
@@ -29,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="User Name"
+            android:text="@string/user_name"
             android:id="@+id/tv_posterName_1"
             android:layout_marginLeft="5dp"
             android:layout_toRightOf="@id/poster_pic_1"
@@ -39,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="price"
+            android:text="@string/points"
             android:id="@+id/nohelpers_1"
             android:textColor="@color/colorAccent"
             android:layout_alignParentRight="true"
@@ -92,4 +87,24 @@
             android:layout_below="@id/userPost_1"
             android:layout_alignParentRight="true"/>
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tv_noh"
+        android:text="Helpers List"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:layout_below="@id/topView"
+        android:gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="10dp"
+        android:id="@+id/recyclerViewHelpers"
+        android:layout_below="@id/tv_noh"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
