--- a/app/src/main/res/layout/fragment_write_request.xml
+++ b/app/src/main/res/layout/fragment_write_request.xml
@@ -41,51 +41,27 @@
         android:gravity="top"
         android:background="@drawable/rounded_corners"/>
 
+
     <LinearLayout
-        android:id="@+id/textHint"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/writepost"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="16dp">
-
-        <TextView
-            android:text="Enter Start Date"
-            android:background="@drawable/rounded_corners_second"
-            android:id="@+id/startTimeText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="40dp" />
-        <TextView
-            android:background="@drawable/rounded_corners_second"
-            android:text="Enter End Date"
-            android:id="@+id/endTimeText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textHint"
         android:orientation="horizontal"
         android:gravity="center"
         android:id="@+id/linear1"
         android:layout_marginTop="16dp">
 
         <EditText
-            android:hint="1994/11/05"
-            android:text="2017/11/05"
+            android:hint="Start Date"
+            android:focusable="false"
             android:id="@+id/startTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
             android:layout_marginEnd="40dp"/>
         <EditText
-            android:hint="2017/11/05"
-            android:text="2017/11/05"
+            android:hint="End Date"
+            android:focusable="false"
             android:id="@+id/endTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -96,6 +72,7 @@
         android:layout_below="@+id/linear1"
         android:id="@+id/buttonSubmit"
         android:text="SUBMIT"
+        android:clickable="false"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
