--- a/app/src/main/res/layout/nav_header_home.xml
+++ b/app/src/main/res/layout/nav_header_home.xml
@@ -16,21 +16,24 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:scaleType="fitStart"
-        android:src="@mipmap/ic_launcher"
-      />
+        android:scaleType="fitXY"
+        android:layout_marginLeft="20dp"
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/textUserName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:layout_marginLeft="16dp"
         android:text="Android Studio"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
+        android:layout_marginLeft="16dp"
         android:id="@+id/textUserMail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
         android:text="android.studio@android.com" />
 </LinearLayout>
